# tetorica-mdrop

./: README.md  deploy_mac.sh  package-lock.json  package.json
docs/: index.html
src/: App.css  App.tsx  useDialog.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
